--- a/post.html
+++ b/post.html
@@ -5,41 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Getting Started with HTML and CSS - Large</title>
     <link rel="stylesheet" href="style/main.css">
-    <style>
-        /* Additional styles for post detail page */
-        .post-header {
-            margin: 40px 0;
-        }
-        .post-header h1 {
-            font-size: 42px;
-            margin-bottom: 16px;
-            line-height: 1.2;
-        }
-        .post-content {
-            font-size: 18px;
-            line-height: 1.7;
-            margin-bottom: 40px;
-        }
-        .post-content p {
-            margin-bottom: 24px;
-        }
-        .comment-form {
-            margin-top: 40px;
-            border-top: 1px solid #e6e6e6;
-            padding-top: 40px;
-        }
-        .comment-form textarea {
-            width: 100%;
-            min-height: 100px;
-            padding: 12px;
-            border: 1px solid #e6e6e6;
-            border-radius: 4px;
-            margin-bottom: 16px;
-            font-family: inherit;
-            font-size: 16px;
-            resize: vertical;
-        }
-    </style>
+    <link rel="stylesheet" href="style/post.css">
+    
 </head>
 <body>
     <!-- Navbar -->
