--- a/write.html
+++ b/write.html
@@ -5,239 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Write a Story - Large</title>
     <link rel="stylesheet" href="style/main.css">
-    <style>
-        /* Navbar Styles */
-        .navbar {
-            border-bottom: 1px solid #e6e6e6;
-            padding: 12px 0;
-            background: white;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .navbar-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #292929;
-            text-decoration: none;
-        }
-
-        .user-menu {
-            position: relative;
-            display: inline-block;
-        }
-
-        .user-avatar {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            cursor: pointer;
-        }
-
-        .dropdown-menu {
-            position: absolute;
-            top: 100%;
-            right: 0;
-            background: white;
-            border: 1px solid #e6e6e6;
-            border-radius: 4px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            min-width: 200px;
-            display: none;
-            z-index: 1000;
-        }
-
-        .dropdown-menu.show {
-            display: block;
-        }
-
-        .dropdown-item {
-            display: block;
-            padding: 12px 16px;
-            color: #292929;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .dropdown-item:hover {
-            background: #f8f8f8;
-        }
-
-        .dropdown-divider {
-            height: 1px;
-            background: #e6e6e6;
-            margin: 8px 0;
-        }
-
-        /* Editor Styles */
-        .editor-container {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .editor-header {
-            margin-bottom: 40px;
-        }
-
-        .title-input {
-            width: 100%;
-            font-size: 32px;
-            font-weight: bold;
-            border: none;
-            outline: none;
-            margin-bottom: 20px;
-            font-family: inherit;
-            color: #292929;
-        }
-
-        .title-input::placeholder {
-            color: #757575;
-        }
-
-        .content-editor {
-            width: 100%;
-            min-height: 500px;
-            font-size: 18px;
-            line-height: 1.7;
-            border: none;
-            outline: none;
-            resize: none;
-            font-family: inherit;
-            color: #292929;
-        }
-
-        .content-editor::placeholder {
-            color: #757575;
-        }
-
-        .editor-toolbar {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: white;
-            border-top: 1px solid #e6e6e6;
-            padding: 12px 0;
-            z-index: 1000;
-        }
-
-        .toolbar-container {
-            max-width: 800px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-        }
-
-        .formatting-buttons {
-            display: flex;
-            gap: 12px;
-        }
-
-        .format-btn {
-            background: none;
-            border: none;
-            padding: 8px;
-            border-radius: 4px;
-            cursor: pointer;
-            color: #292929;
-        }
-
-        .format-btn:hover {
-            background: #f2f2f2;
-        }
-
-        .format-btn svg {
-            width: 20px;
-            height: 20px;
-        }
-
-        .publish-options {
-            display: flex;
-            gap: 12px;
-        }
-
-        .save-draft {
-            padding: 8px 16px;
-            border: 1px solid #e6e6e6;
-            border-radius: 20px;
-            background: none;
-            color: #292929;
-            cursor: pointer;
-        }
-
-        .save-draft:hover {
-            background: #f2f2f2;
-        }
-
-        .publish-btn {
-            padding: 8px 24px;
-            border-radius: 20px;
-            border: none;
-            background: #1a8917;
-            color: white;
-            cursor: pointer;
-        }
-
-        .publish-btn:hover {
-            background: #156912;
-        }
-
-        .tag-input {
-            width: 100%;
-            padding: 12px 0;
-            border: none;
-            outline: none;
-            font-size: 16px;
-            margin-bottom: 20px;
-            border-bottom: 1px solid #e6e6e6;
-        }
-
-        .tag-input::placeholder {
-            color: #757575;
-        }
-
-        .cover-image-container {
-            margin: 20px 0;
-            position: relative;
-        }
-
-        .cover-image-btn {
-            width: 100%;
-            padding: 40px;
-            border: 2px dashed #e6e6e6;
-            border-radius: 4px;
-            background: none;
-            cursor: pointer;
-            color: #757575;
-            transition: all 0.2s ease;
-        }
-
-        .cover-image-btn:hover {
-            border-color: #1a8917;
-            color: #1a8917;
-        }
-
-        .cover-image {
-            width: 100%;
-            max-height: 400px;
-            object-fit: cover;
-            border-radius: 4px;
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style/write.css">
+    
 </head>
 <body>
     <!-- Navbar -->
@@ -315,42 +84,8 @@
         </div>
     </div>
 
-    <script>
-        // Kullanıcı menüsü için dropdown işlevselliği
-        const userMenuBtn = document.getElementById('userMenuBtn');
-        const userDropdown = document.getElementById('userDropdown');
+    <script src="script/write.js">
 
-        userMenuBtn.addEventListener('click', () => {
-            userDropdown.classList.toggle('show');
-        });
-
-        // Sayfa herhangi bir yerine tıklandığında menüyü kapat
-        window.addEventListener('click', (e) => {
-            if (!e.target.matches('.user-avatar')) {
-                if (userDropdown.classList.contains('show')) {
-                    userDropdown.classList.remove('show');
-                }
-            }
-        });
-
-        // Kapak resmi yükleme işlevselliği
-        const coverImageBtn = document.getElementById('coverImageBtn');
-        const coverImage = document.getElementById('coverImage');
-
-        coverImageBtn.addEventListener('click', () => {
-            // Gerçek uygulamada burada dosya yükleme işlemi olacak
-            // Şimdilik örnek bir resim gösteriyoruz
-            coverImage.src = 'https://picsum.photos/800/400';
-            coverImage.style.display = 'block';
-            coverImageBtn.style.display = 'none';
-        });
-
-        // Format butonlarının işlevselliği
-        document.querySelectorAll('.format-btn').forEach(btn => {
-            btn.addEventListener('click', () => {
-                btn.classList.toggle('active');
-            });
-        });
     </script>
 </body>
 </html> 
